tests/should_fail/syntax_index_non_indexable.nv
module main

// SHOULD FAIL: index into a non-list non-tuple (e.g. Int)
fn foo() -> Int { return 5 }
let x = foo()
println(x[0])
